mode mobile et pc presque fini

--- a/units/index.htm
+++ b/units/index.htm
@@ -29,11 +29,36 @@
     </header>
 
     <section class="media">
-        <p class="media__texte">Lancer vous dans le monde du web pour booster votre visibilité</p>
-        <button class="media__contact">Contactez-nous</button>
+        <img class="media__video-promo" src="https://placehold.co/400x200" alt="">
+        <div class="media__conteneur">
+            <p class="media__texte">Lancer vous dans le monde <strong>digital</strong> et faites de vos <strong> envies </strong> une <strong>réalité</strong> en nous faisant <strong> confiance</strong>!</p>
+            <div class="buttons">
+                <button class="blob-btn">
+                    Prendre un rendez-vous
+                    <span class="blob-btn__inner">
+                    <span class="blob-btn__blobs">
+                        <span class="blob-btn__blob"></span>
+                        <span class="blob-btn__blob"></span>
+                        <span class="blob-btn__blob"></span>
+                        <span class="blob-btn__blob"></span>
+                    </span>
+                    </span>
+                </button>
+                <br/>
+
+                <svg xmlns="http://www.w3.org/2000/svg" version="1.1">
+                <defs>
+                    <filter id="goo">
+                    <feGaussianBlur in="SourceGraphic" result="blur" stdDeviation="10"></feGaussianBlur>
+                    <feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0 0 1 0 0 0 0 0 1 0 0 0 0 0 21 -7" result="goo"></feColorMatrix>
+                    <feBlend in2="goo" in="SourceGraphic" result="mix"></feBlend>
+                    </filter>
+                </defs>
+                </svg>
+            </div>
     </section>
 
-    <section class="projets">
+    <!-- <section class="projets">
         <h1 class="projets__titre">Nos projets</h1>
             <div class="projets__divGlobal">
                 <div class="projets__div">
@@ -121,7 +146,7 @@
     <section class="histoire">
         <h3 class="histoire__titre">Notre histoire</h3>
         <p class="hristoire__p">L’agence Units est née de l’initiative de deux passionnés en intégration web et multimédia, désireux d’apporter une vision nouvelle dans le domaine de la création de sites web.<br>Derrière Units se cache une idée simple : rendre la création de sites web accessible aux petites entreprises et aux particuliers.<br>C’est dans cet esprit qu’en 2025, les deux cofondateurs, Guilhem Torres et Bastien Seel, ont officiellement lancé Units.</p>
-    </section>
+    </section> -->
 
     <footer class="footer">
         <div class="footer__contact">
